# abalone_ia

./: .gitignore  CMakeLists.txt
assets/shaders/: marble_fs.glsl  marble_vs.glsl  skybox_fs.glsl  skybox_vs.glsl
src/: Game.cpp  Game.h  main.cpp  main2D.cpp  main3D.cpp  mainConsole.cpp
src/ai/: MinimaxAI.cpp  MinimaxAI.h
src/app/: GameApp.cpp  GameApp.h  GameApp2D.cpp  GameApp2D.h  GameApp3D.cpp  GameApp3D.h  GameAppConsole.cpp  GameAppConsole.h
src/core/: Board.cpp  Board.h  Direction.h  GameEngine.cpp  GameEngine.h  Game_Rules.cpp  InputHandler.cpp  InputHandler.h  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  Position.cpp  Position.h
src/game/: Board.h  GameEngine.cpp  GameEngine.h  GameState.h  Game_Rules.cpp  Game_Rules.h  InputHandler.h  Move.h  MoveGenerator.cpp  MoveGenerator.h
src/geometry/: Position.cpp  Position.h
src/render/: MeshGenerator.cpp  MeshGenerator.h  Renderer.cpp  Renderer.h  Skybox.cpp  Skybox.h  UI.cpp  UI.h
